--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,26 @@
 <body>
     <div class="wrapper">
         <div class="content">
-            
+            <header class="header">
+                <div class="container">
+                    <div class="header__inner">
+                        <div class="header__logo">
+                            <a href="#">
+                                <img src="images/header-logo.png" alt="">
+                            </a>
+                        </div>
+                        <div class="header__map">
+                            Архангельск
+                        </div>
+                        <a class="header__phone" href="tel: 70000000000">
+                            +7 (000) 000-00-00
+                        </a>
+                        <a class="default__btn" href="#">
+                            Заказать звонок
+                        </a>
+                    </div>
+                </div>
+            </header>
         </div>
         <footer class="footer">
             
