--- a/app/index.html
+++ b/app/index.html
@@ -19,9 +19,9 @@
                                 <img src="images/header-logo.png" alt="">
                             </a>
                         </div>
-                        <div class="header__map">
+                        <a class="header__map" href="#">
                             Архангельск
-                        </div>
+                        </a>
                         <a class="header__phone" href="tel: 70000000000">
                             +7 (000) 000-00-00
                         </a>
@@ -31,6 +31,52 @@
                     </div>
                 </div>
             </header>
+            <section class="main">
+                <div class="main__top">
+                    <div class="container">
+                        <div class="main__top-inner">
+                            <div class="main__top-title">
+                                Банкротство физических лиц 
+                            </div>
+                            <div class="main__top-subtitle">
+                                в г. Архангельск
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="main__slider">
+                    <div class="container">
+                        <div class="main__slider-box">
+                            <div class="main__slider-inner">
+                                <div class="main__slider-item">
+                                    <div class="main__slider-title">
+                                        Избавьтесь от долгов совершенно легально!
+                                    </div>
+                                    <a class="main__slider-btn default__btn" href="#">
+                                        Подробная консультация
+                                    </a>
+                                </div>
+                                <div class="main__slider-item">
+                                    <div class="main__slider-title">
+                                        Избавьтесь от долгов совершенно легально!
+                                    </div>
+                                    <a class="main__slider-btn default__btn" href="#">
+                                        Подробная консультация
+                                    </a>
+                                </div>
+                                <div class="main__slider-item">
+                                    <div class="main__slider-title">
+                                        Избавьтесь от долгов совершенно легально!
+                                    </div>
+                                    <a class="main__slider-btn default__btn" href="#">
+                                        Подробная консультация
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
         <footer class="footer">
             
