added section instruction

--- a/app/index.html
+++ b/app/index.html
@@ -77,6 +77,38 @@
                     </div>
                 </div>
             </section>
+            <section class="instruction">
+                <div class="container">
+                    <div class="instruction__inner">
+                        <div class="instruction__content">
+                            <div class="instruction__title">
+                                Попали в тяжелое финансовое положение?
+                            </div>
+                            <div class="instruction__text">
+                                За последний год работы мы уже помогли <span>более, чем 150 клиентам</span> выйти из трудной ситуации!
+                            </div>
+                        </div>
+                        <div class="instruction__form">
+                            <form>
+                                <div class="instruction__form-title">
+                                    Получите бесплатно пошаговую инструкцию 
+                                </div>
+                                <div class="instruction__form-subtitle">
+                                    по процедуре банкротства прямо сейчас:
+                                </div>
+                                <input type="tel" placeholder="Введите ваш телефон" required>
+                                <button class="default__btn" type="submit">Получить инструкцию</button>
+                                <div class="instruction__form-subtext">
+                                    Мы перезвоним в течение 5 минут
+                                </div>
+                                <label>
+                                    <input type="checkbox"> Согласен с <a href="#">обработкой персональных данных</a>
+                                </label>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
         <footer class="footer">
             
