added section procedure

--- a/app/index.html
+++ b/app/index.html
@@ -109,6 +109,32 @@
                     </div>
                 </div>
             </section>
+            <section class="procedure">
+                <div class="container">
+                    <div class="procedure__title title">
+                        Сложная процедура банкротства?
+                    </div>
+                    <div class="procedure__subtitle">
+                        С нами это легко!
+                    </div>
+                    <div class="procedure__inner">
+                        <div class="procedure__item">
+                            С вами работает <span>персональный менеджер по банкротству,</span> который постоянно в курсе этапов вашего дела.
+                        </div>
+                        <div class="procedure__item procedure__item-document">
+                            Соберем весь пакет документов. <span>С нами вы не тратите время и нервы!</span>
+                        </div>
+                        <div class="procedure__item procedure__item-garant">
+                            Все гарантии мы <span>прописываем в договоре!</span>
+                        </div>
+                        <div class="procedure__item procedure__item-finance">
+                            3 опытных финансовых управляющих в команде! <span>Ваше дело в надежных руках!</span>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+
         </div>
         <footer class="footer">
             
