added section cost

--- a/app/index.html
+++ b/app/index.html
@@ -88,21 +88,21 @@
                                 За последний год работы мы уже помогли <span>более, чем 150 клиентам</span> выйти из трудной ситуации!
                             </div>
                         </div>
-                        <div class="instruction__form">
+                        <div class="instruction__form default__form">
                             <form>
-                                <div class="instruction__form-title">
+                                <div class="default__form-title">
                                     Получите бесплатно пошаговую инструкцию 
                                 </div>
-                                <div class="instruction__form-subtitle">
+                                <div class="default__form-subtitle">
                                     по процедуре банкротства прямо сейчас:
                                 </div>
                                 <input type="tel" placeholder="Введите ваш телефон" required>
                                 <button class="default__btn" type="submit">Получить инструкцию</button>
-                                <div class="instruction__form-subtext">
+                                <div class="default__form-subtext">
                                     Мы перезвоним в течение 5 минут
                                 </div>
                                 <label>
-                                    <input type="checkbox"> Согласен с <a href="#">обработкой персональных данных</a>
+                                    <input type="checkbox" required> Согласен с <a href="#">обработкой персональных данных</a>
                                 </label>
                             </form>
                         </div>
@@ -133,7 +133,33 @@
                     </div>
                 </div>
             </section>
-
+            <section class="cost">
+                <div class="container">
+                    <div class="cost__inner">
+                        <div class="cost__title title">
+                            Как узнать стоимость услуг?
+                        </div>
+                        <div class="cost__form default__form">
+                            <form>
+                                <div class="default__form-title">
+                                    Наш консультант свяжется с вами и бесплатно проанализирует
+                                </div>
+                                <div class="default__form-subtitle">
+                                    ваш долговой портфель, чтобы определить цену услуг
+                                </div>
+                                <input type="tel" placeholder="Введите ваш телефон" required>
+                                <button class="default__btn" type="submit">Получить инструкцию</button>
+                                <div class="default__form-subtext">
+                                    Мы перезвоним в течение 5 минут
+                                </div>
+                                <label>
+                                    <input type="checkbox" required> Согласен с <a href="#">обработкой персональных данных</a>
+                                </label>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </section>
 
         </div>
         <footer class="footer">
