added section advantages

--- a/app/index.html
+++ b/app/index.html
@@ -160,6 +160,39 @@
                     </div>
                 </div>
             </section>
+            <section class="advantages">
+                <div class="container">
+                    <div class="advantages__title title">
+                        Удобно ли с нами работать?
+                    </div>
+                    <div class="advantages__inner">
+                        <div class="advantages__item">
+                            <div class="advantages__item-title">
+                                Рассрочка до 12 месяцев
+                            </div>
+                            <div class="advantages__item-text">
+                                Наши клиенты зачастую находятся в сложном финансовом положении, поэтому у нас существует гибкая система оплаты  
+                            </div>
+                        </div>
+                        <div class="advantages__item advantages__item-work">
+                            <div class="advantages__item-title">
+                                Работаем в выходные
+                            </div>
+                            <div class="advantages__item-text">
+                                У вас плотный график?  - Не беда! Наш офис работает по выходным для большего удобства клиентов    
+                            </div>
+                        </div>
+                        <div class="advantages__item advantages__item-result">
+                            <div class="advantages__item-title">
+                                Оплата по результату
+                            </div>
+                            <div class="advantages__item-text">
+                                Окончательная оплата происходит по завершению процедуры банкротства 
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
 
         </div>
         <footer class="footer">
