added section time

--- a/app/index.html
+++ b/app/index.html
@@ -193,6 +193,79 @@
                     </div>
                 </div>
             </section>
+            <section class="time">
+                <div class="container">
+                    <div class="time__title title">
+                        Сколько длится процедура банкротства?
+                    </div>
+                    <div class="time__subtitle">
+                        В среднем, процедура банкротства длится от 6 до 12 месяцев
+                    </div>
+                    <div class="time__inner">
+                        <div class="time__item">
+                            <img src="images/icons/time-item-1.png" alt="">
+                        </div>
+                        <div class="time__item">
+                            <img src="images/icons/time-item-2.png" alt="">
+                        </div>
+                        <div class="time__item">
+                            <img src="images/icons/time-item-3.png" alt="">
+                        </div>
+                        <div class="time__item">
+                            <img src="images/icons/time-item-4.png" alt="">
+                        </div>
+                        <div class="time__item">
+                            <img src="images/icons/time-item-5.png" alt="">
+                        </div>
+                        <div class="time__item">
+                            <img src="images/icons/time-item-6.png" alt="">
+                        </div>
+                        <div class="time__item">
+                            <img src="images/icons/time-item-7.png" alt="">
+                        </div>
+                        <div class="time__item">
+                            <img src="images/icons/time-item-8.png" alt="">
+                        </div>
+                    </div>
+                    <div class="time__slider">
+                        <div class="time__slider-inner">
+                            <div class="time__slider-item">
+                                <div class="time__slider-title">
+                                    Подготовка и сбор документов 
+                                </div>
+                                <div class="time__slider-text">
+                                    Мы соберем и подготовим комплект документов более чем из 17 позиций. Вам не нужно будет посещать: банки, МФЦ, ПФР, ИНФНС, ГИБДД и другие места, мы сделаем это за вас! 
+                                </div>
+                                <a class="time__slider-btn default__btn" href="#">
+                                    Начать процедуру банкротства
+                                </a>
+                            </div>
+                            <div class="time__slider-item">
+                                <div class="time__slider-title">
+                                    Подготовка и сбор документов 
+                                </div>
+                                <div class="time__slider-text">
+                                    Мы соберем и подготовим комплект документов более чем из 17 позиций. Вам не нужно будет посещать: банки, МФЦ, ПФР, ИНФНС, ГИБДД и другие места, мы сделаем это за вас! 
+                                </div>
+                                <a class="time__slider-btn default__btn" href="#">
+                                    Начать процедуру банкротства
+                                </a>
+                            </div>
+                            <div class="time__slider-item">
+                                <div class="time__slider-title">
+                                    Подготовка и сбор документов 
+                                </div>
+                                <div class="time__slider-text">
+                                    Мы соберем и подготовим комплект документов более чем из 17 позиций. Вам не нужно будет посещать: банки, МФЦ, ПФР, ИНФНС, ГИБДД и другие места, мы сделаем это за вас! 
+                                </div>
+                                <a class="time__slider-btn default__btn" href="#">
+                                    Начать процедуру банкротства
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
 
         </div>
         <footer class="footer">
