added section experience

--- a/app/index.html
+++ b/app/index.html
@@ -266,6 +266,38 @@
                     </div>
                 </div>
             </section>
+            <section class="experience">
+                <div class="container">
+                    <div class="experience__title title">
+                        Опыт работы? - Более 10 лет!  
+                    </div>
+                    <div class="experience__subtitle">
+                        Посмотрите наши успешные решения по делам:
+                    </div>
+                    <div class="experience__slider">  
+                        <div class="experience__slider-inner">
+                            <div class="experience__item">
+                                <img src="images/content/experience-item-1.png" alt="">
+                            </div>
+                            <div class="experience__item">
+                                <img src="images/content/experience-item-2.png" alt="">
+                            </div>
+                            <div class="experience__item">
+                                <img src="images/content/experience-item-3.png" alt="">
+                            </div>
+                            <div class="experience__item">
+                                <img src="images/content/experience-item-1.png" alt="">
+                            </div>
+                            <div class="experience__item">
+                                <img src="images/content/experience-item-2.png" alt="">
+                            </div>
+                            <div class="experience__item">
+                                <img src="images/content/experience-item-3.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
 
         </div>
         <footer class="footer">
