added section guarantee

--- a/app/index.html
+++ b/app/index.html
@@ -298,6 +298,33 @@
                     </div>
                 </div>
             </section>
+            <section class="guarantee">
+                <div class="container">
+                    <div class="guarantee__inner">
+                        <div class="guarantee__title title">
+                            Гарантируем положительный результат!
+                        </div>
+                        <div class="guarantee__form default__form">
+                            <form>
+                                <div class="default__form-title">
+                                    Беремся за самые сложные дела
+                                </div>
+                                <div class="default__form-subtitle">
+                                    Получите бесплатно консультацию по своему вопросу
+                                </div>
+                                <input type="tel" placeholder="Введите ваш телефон" required>
+                                <button class="default__btn" type="submit">Получить инструкцию</button>
+                                <div class="default__form-subtext">
+                                    Мы перезвоним в течение 5 минут
+                                </div>
+                                <label>
+                                    <input type="checkbox" required> Согласен с <a href="#">обработкой персональных данных</a>
+                                </label>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </section>
 
         </div>
         <footer class="footer">
