added section footer

--- a/app/index.html
+++ b/app/index.html
@@ -325,10 +325,52 @@
                     </div>
                 </div>
             </section>
-
         </div>
         <footer class="footer">
-            
+            <div class="footer__contacts">
+                <div class="container">
+                    <div class="footer__contacts-inner">
+                        <div class="footer__contacts-title">
+                            Вы можете найти нас по адресу:
+                        </div>  
+                        <div class="footer__contacts-adress">
+                            г. Архангельск ул. Тимме, д. 77
+                        </div>
+                        <a class="footer__contacts-phone" href="tel: 70000000000">
+                            +7 (000) 000-00-00
+                        </a>
+                        <div class="footer__form default__form">
+                            <form>
+                                <div class="footer__form-inner">
+                                    <div class="default__form-subtitle">
+                                        Договориться о встрече на удобное для вас время:
+                                    </div>
+                                    <input type="tel" placeholder="Введите ваш телефон" required>
+                                    <button class="default__btn" type="submit">Получить инструкцию</button>
+                                </div>
+                                <label>
+                                    <input type="checkbox" required> Согласен с <a href="#">обработкой персональных данных</a>
+                                </label>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="footer__copy">
+                <div class="container">
+                    <div class="footer__copy-inner">
+                        <div class="footer__copy-text">
+                            Реквизиты Реквизиты Реквизиты
+                        </div>
+                        <div class="footer__copy-logo">
+                            <a href="#">
+                                <img src="images/header-logo.png" alt="">
+                            </a>
+                        </div>
+                        <a class="footer__copy-phone" href="tel: 70000000000">+7 (000) 000-00-00</a>
+                    </div>
+                </div>
+            </div>
         </footer>
     </div>
 
